--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,9 +18,9 @@
 	</head>
 	<body>
 		<div class="jumbotron" id="hero"> 
-				<h1>BURGER TIME</h1>
+				<h1 class="text-pop-up-top">BURGER TIME</h1>
 		</div>
-		<div class="container-fluid" id="content">
+		<div class="container-fluid row" id="content">
 			
 			{{{body}}}
 
