--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 
-<div class="tableBox">
+<div class="tableBox col-xl-8 col-lg-8 col-md-8 -colsm-12 col-xs-12">
   <table class="table">
     <thead>
       <th> BURGER ID</th>
@@ -9,21 +9,23 @@
     <tbody>
       {{#each burgers}}
         {{#unless this.devoured}}
-          <td>this.id</td>
-          <td>this.burger_name</td>
+        <tr>
+          <td>{{this.id}}</td>
+          <td><img src="/assets/images/burger.gif" alt="burger" height="30px"> {{this.burger_name}}</td>
            <td>
               <form action="/{{this.id}}?_method=PUT" method="POST">
-                <input type="hidden" name="sleepy" value="true">
-                <button class="btn btn-warning" type="submit">Devour it!</button>
+                <input type="hidden" name="burgerName" value="true">
+                <button class="btn btn-success" type="submit">Devour it!</button>
               </form>
           </td>
+          </tr>
         {{/unless}}
       {{/each}}
     </tbody>
   </table>
 </div>
 
-<div class="tableBox">
+<div class="tableBox  col-xl-4 col-lg-4 col-md-4 -colsm-12 col-xs-12">
   <table class="table">
       <thead>
       <th> DEVOURED BURGERS</th>
@@ -31,7 +33,9 @@
         <tbody>
           {{#each burgers}}
             {{#if this.devoured}}
-              <td>this.burger_name</td>
+            <tr>
+              <td><span class="glyphicon glyphicon-heart-empty glyphicon-inverse" aria-hidden="true" >  {{this.burger_name}}</td>
+            </tr>
             {{/if}}
           {{/each}}
         </tbody>
@@ -43,15 +47,15 @@
 <hr>
 <br>
 
-<div class="container">
+<div class="jumbotron col-xl-12 col-lg-12 col-md-12 -colsm-12 col-xs-12" id="addBox">
     <h2>Add a Burger</h2>
 
     <form action="/" method="POST">
 
         <label for="burgerBox">Burger Name:</label>
-        <input type="text" id="burgerBox" name="name">
+        <input type="text" id="burgerBox" name="name" >
 
-      <button class="btn btn-primary" type="submit">Add</button>
+      <button class="btn btn-danger" type="submit">Add</button>
 
     </form>
 </div>
