--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<div class="jumbotron" id="hero"> 
-				<h1 class="text-pop-up-top">BURGER TIME</h1>
+				<h1 class="tracking-in-expand">EAT-DA-BURGER!</h1>
 		</div>
 		<div class="container-fluid row" id="content">
 			
